--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -30,20 +30,37 @@ Ved 11 bit og brug af BASYS boardets interne clock på 50 MHz bliver PWM frekven
   \frac{2^{11}}{50 MHz} = 24.41 KHz 
 \end{equation}
 
+\subsubsection*{Kalibrering af motorposition}
+PTS skal kunne tændes i en tilfældig position og derefter kalibreres.
+Kalibreringen af motorpositionen kan laves ved at sørge for at PTS drejer forbi 
+de to hall sensorer, der er placeret på systemet. Dette vil give et signal, da 
+der på PTS er placeret en magnet på hver af rammerne.
+Det blev besluttet af placere ansvaret for at dreje rammerne hen til hall 
+sensorerne hos mikrokontrolleren. Det blev besluttet, da det giver mulighed for 
+en simplere protokol mellem FPGA og mikrokontroller. Det sirker samtidigt at mikrokontrolleren 
+altid har kontrol over hvordan PTS bevæger sig.
+Funktionaliteten der skal være på FPGAen er således at opfange outputtet fra 
+hall sensorerne og nulstille den tilhørende position.
+Dog viste det sig at hall sensorernes output ikke kun er højt på ét encodertick, 
+men derimod adskillige. Det er nødvendigt at FPGAen tager højde for 
+dette.
+
 \subsection{Opbygningen på FPGA}
 På figur \ref{fig:FPGA_blok} ses et simplificeret diagram over komponenterne på FPGAen. 
 De grønne bokse angiver komponenter på FPGAen, mens de grå cirkler angiver hvad, der ikke ligger på 
 FPGAens chip. Pilene imellem FPGAens komponenter angiver retningen på 
 datastrømme. Diagrammet er simplificeret ved at vise to ens komponenter som én. 
 F.eks. er der ikke én tic counter komponent på FPGAen, men derimod to.
-Herunder følger en forklaring på komponenternes funktionalitet.
+Herunder følger en forklaring på komponenternes.
+
+\todo[inline, color = pink]{Mikkel: Måske ender meget af nedenstående i appendix?}
 
 \subsection*{Tic counter}
 \textbf{Input:}
 Signaler fra encoder på PTS. Reset signal fra tic reset.
 
 \textbf{Output:} Positionen på hver af motorerne angivet i antal tics mellem 0 
-og 1080.
+og 1080. Retningen, som motorerne roterer i. 
 
 Da encoderne på PTS er quadrature encodere er det muligt at bestemme både retning og 
 tælle rotationer på motoren.
@@ -56,8 +73,22 @@ et reset signal fra tic reset komponenten.
 Når dette reset signal modtages nulstilles positionen og er herved kalibreret.
 
 \subsection*{Tic reset}
+\textbf{Input:} Signaler fra hall sensorer på PTS. Rotationsretning.
 
-\subsection*{Display }
+\textbf{Output:} Reset signal.
+ \missingfigure{Mangler en figur der viser konceptet!}
+Som beskrevet tidligere er der et behov for at lave et reset signal til positionen. 
+Dette skal gøres ved hjælp af hall sensorer på PTS. 
+Det viser sig dog at hall sensorernes output ikke kun er højt på ét encodertick. 
+Derfor kan signalet fra hall sensorerne ikke i sig selv bruges som reset signal.
+PTS rotationsretningen tages derfor med i beregningen.
+Hvis PTS roterer i én retning sendes sættes reset signalet højt på opadgående 
+flanke på hall sensor outputtet, mens reset signalet sættes højt på nedadgående 
+flanke i den anden retning. 
+Hermed fås et så smalt område, hvor reset signalet er højt, som muligt. 
+Det er testet at dette område svarer til ca. 1-2 ticks.
+
+\subsection*{Display}
 
 \subsection*{Clock scaler}
 
