--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -8,17 +8,28 @@ Lerduens position bestemmes som funktion af tiden, hvor specifikationerne for le
 \caption[tekst i indholdsfortegnelsen]{figurtekst}
 \label{fig:ES}
 \end{figure}	
-Systemets input er 60 kartesiske koordinatsæt (x ; y ; z) per sekund. Hvor de kartesiske koordinater kommer fra er uden for projektafgrænsningen. \\
+Systemets input er 60 kartesiske koordinatsæt (x ; y ; z) per sekund.
+Hvor de kartesiske koordinater kommer fra er uden for projektafgrænsningen. \\
 
-I ES affyres serier af lerduer fra "High House" eller "Low House". Gennem serien skifter skytten mellem de otte stationer langs cirkelperiferien. Det kartesiske koordinatsystems origo ses på skitsen over banen, figur \ref{fig:ES}.\\
+I ES affyres serier af lerduer fra "High House" eller "Low House".
+Gennem serien skifter skytten mellem de otte stationer langs cirkelperiferien.
+Det kartesiske koordinatsystems origo ses på skitsen over banen, figur \ref{fig:ES}.\\
 
-Det kartesiske koordinatsystem har origo på banens centrum. Akserne er indtegnet på figur \ref{fig:ES}. PTS's origo er placeret 45 [cm] over jorden. PTS står i udgangsposition med \(\phi\) og \(\theta\) lig med 0. Dvs. at tilts ramme står parallelt med yz-planet og det påmonteret gevær er parallelt med x-planet.\\
+Det kartesiske koordinatsystem har origo på banens centrum.
+Akserne er indtegnet på figur \ref{fig:ES}. PTS's origo er placeret 45 [cm] over jorden.
+PTS står i udgangsposition med \(\phi\) og \(\theta\) lig med 0.
+Dvs. at tilts ramme står parallelt med yz-planet og det påmonteret gevær er parallelt med x-planet.\\
 
-Geværet der bruges i ES har en spredning på ca. 2\degree. Systemet skal altså sigte efter målet med en nøjagtighed på \(\pm 1 \degree\) før geværet affyres. Ideelt set skal skytten skyde ca. når lerduen rammer toppunktet. Derfor skal PTS følge være "settlet" på lerduen inden lerduens toppunkt er nået.\\
+Geværet der bruges i ES har en spredning på ca. 2\degree.
+Systemet skal altså sigte efter målet med en nøjagtighed på \(\pm 1 \degree\) før geværet affyres.
+Ideelt set skal skytten skyde ca. når lerduen rammer toppunktet.
+Derfor skal PTS følge være "settlet" på lerduen inden lerduens toppunkt er nået.\\
 
-Pans rotationen er begrænset til 170\degree\todo[author=Michael]{Mangler: Mål pan-rammens bevægelsesfrihed} omkring z-planet. Dette begrænser derved PTS maksimale overshoot.\\
+Pans rotationen er begrænset til 170\degree\todo[author=Michael]{Mangler: Mål pan-rammens bevægelsesfrihed} omkring z-planet.
+Dette begrænser derved PTS maksimale overshoot.\\
 
-Lerduen bliver affyret med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel på \(9,103^{\circ}\) ift. xz-planet, i 3D-rummet med negligerbar luftmodstand og tyngdekraft. Set ovenfra bevæger målet sig som set på figur \ref{fig:para_in_xy_plane}. 
+Lerduen bliver affyret med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel på \(9,103^{\circ}\) ift. xz-planet,
+i 3D-rummet med negligerbar luftmodstand og tyngdekraft. Set ovenfra bevæger målet sig som set på figur \ref{fig:para_in_xy_plane}. 
 På figur \ref{fig:HH2D_para} ses nedslagspunktet, G, fra High-House 52 [m] efter startpositionen, D, samt  
 PTS placering i punktet B.\\
 \begin{figure}[h!]
@@ -36,4 +47,6 @@ PTS placering i punktet B.\\
 \caption[Lerduens parabel i 2D]{Viser parablen af lerduens bane i 2D.}
 \end{figure}
 
-PTS dimensioneres til en konkurrence i ES og er afgrænset til et enkelt tilfælde: Afskydning fra ”High-House” med PTS placeret på station 4. Øvrige kravspecificeringer fåes i sektion \ref{sec:kravspecifikation}.
+PTS dimensioneres til en konkurrence i ES og er afgrænset til et enkelt tilfælde:
+Afskydning fra ”High-House” med PTS placeret på station 4.
+Øvrige kravspecificeringer fåes i sektion \ref{sec:kravspecifikation}.
