--- a/Rapport/graphics/parabola_in_xy_plane.tex
+++ b/Rapport/graphics/parabola_in_xy_plane.tex
@@ -1,5 +1,5 @@
-\draw[->] (-22,0)--(32,0) node[right]{Y};
-\draw[<-] (0,-22)--(0,12)node[right]{X};
+\draw[->] (-22,0)--(32,0) node[right]{Y [m]};
+\draw[<-] (0,-22)--(0,12)node[right]{X [m]};
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \draw(-0.2,5)node[left]{-5}--(0.2,5);
 \draw(-0.2,10)node[left]{-10}--(0.2,10);
