--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -3,7 +3,9 @@
 \begin{document}
 \pagenumbering{Roman}
 \include{./content/forside}
-\cleardoublepage
+%\cleardoublepage
+\clearpage
+\include{./content/abstract}
 \include{./content/templates} % Kan bruges til copy paste ind i rapport for forskellige outputs.....
 \include{./content/ansvarsomraader}
 \include{./content/indholdsfortegnelse}
