--- a/Rapport/content/kommunikation_mellem_mikrocontroller_og_FPGA.tex
+++ b/Rapport/content/kommunikation_mellem_mikrocontroller_og_FPGA.tex
@@ -1,18 +1,18 @@
 \section{Kommunikation mellem mikrocontroller og FPGA}
 
-Kommunikationen mellem Micro contolleren og FPGA’ensker med SPI. SPI står for Serial Peripheral Interface. Det er en protokol hvor, der bliver overført data mellem en master og en eller flere slaver. Overførelsen sker i full duplex mode, så der bliver sendt data både fra masteren og slaven på samme tid.
+Kommunikationen mellem Micro contolleren og FPGA’en foregår med SPI. SPI står for Serial Peripheral Interface. Det er en protokol hvor, der bliver overført data mellem en master og en eller flere slaver. Overførelsen sker med full duplex, så der bliver sendt data både fra masteren og slaven på samme tid.
 
-Der er fire forbindelse mellem masteren og slaverne: Slave Select, Serial CLock (SCLK), MOSI og MISO. Slave Select bruges til at vælge hvilken slave der skal overføres data med. Den kan også sammenlignes med en chip select. SCLK bruges som clock frekvens, som synkronisere Salve Select, MOSI og MISO. MOSI står for Master Output Slave Input, det er dataet master sender til slaven, ligeså er MISO Master Input Slave Output, som er dataet, som master modtager fra slaven.
+Der er fire kanaler mellem masteren og slaverne: Slave Select, Serial Clock (SCLK), MOSI og MISO. Slave Select bruges til at vælge hvilken slave, der skal overføres data med. Den kan også sammenlignes med en chip select. SCLK bruges som clock frekvens, den synkroniserer Salve Select, MOSI og MISO. MOSI står for Master Output Slave Input, det er dataet, master sender til slaven, ligeså er MISO Master Input Slave Output, som er dataet, master modtager fra slaven.
 
-Når der er flere end en slave, deler de SCLK, MOSI og MISO, men de har en Slave Select hver. Forløbet er sådan at master sender et SS signal til den ønskede slave. De slaver der ikke har modtaget et SS signal ignorer det der bliver sendt på MOSI og MISO. I et system kun med en slave kan SS udelades, da der kun er en slave at vælge. 
+Når der er flere end en slave, deler de SCLK, MOSI og MISO, men de har en Slave Select hver. Forløbet er således at master sender et Slave Select signal til den ønskede slave. De slaver, der ikke har modtaget et SS signal, ignorer det, der bliver sendt på MOSI og MISO. I et system kun med en slave, kan SS udelades, da der kun er en slave at vælge. 
  
 
 \subsection{Overvejelser og valg}
 Der er gået mange overvejelser i hvordan SPI'en mellem Micro controlleren og FPGA'en skal  opbygges.
 
-Det blev vedtaget at Micocontrolleren var masteren og FPGA blev slaven, da FPGA'en helst skulle være så enkel som mulig.
+Det blev vedtaget at Mico controlleren var masteren og FPGA'en blev slaven, da FPGA'en helst skulle være så enkel som mulig.
 
-Micro controlleren har også indbygget tre SPI programmer, hvor den kan være masteren. De tre typer er TI Synchronous Serial Frame Format (SSFT), Freescale og Microwire. Til at overfører dataene mellem Micro controlleren og FPGA’en skal der bruges en enkel protokol med full duplex. Hovedgrundene for at protokollen skal væe enkel, er at der ikke sendes meget data, dataene er enkel og afstanden den sendes er kort. Derfor blev SSFT valgt som protokol. I SSFT liggre svaret på nogle af overvejelserne. Overvejelserne har været om MOSI skal trigger på rising eller falling edge, og hvordan Slave Select skulle opføre sig.
+Micro controlleren har også indbygget tre SPI programmer. De tre typer er TI Synchronous Serial Frame Format (SSFT), Freescale og Microwire. Til at overfører dataene mellem Micro controlleren og FPGA’en skal der bruges en enkel protokol med full duplex. Hovedgrundene for at protokollen skal være enkel, er at der ikke sendes meget data, dataene er enkel og afstanden den sendes er kort. Derfor blev SSFT valgt som protokol. I SSFT liggre svaret på nogle af overvejelserne. Overvejelserne har været om MOSI skal trigger på rising eller falling edge, og hvordan Slave Select skulle opføre sig.
 
 Frekvensen af SCLK skal vælges så høj, at SPI ikke bliver en flaskehals i kommunikationen mellem Micro controller og FPGA’en, og tilpas lav, så der ikke introduceres unødige fejlkilder, ved at FPGA’en ikke kan følge med.
 
@@ -28,4 +28,4 @@ Forløbet for en overførelse er SLCK en puls mere end besked størelsen er lang
 
 SPI på FPGA’en er meget enkel, det er to shift registre, en til MOSI og en til MISO. På Micro controlleren kommer dataene fra en FIFO buffer. Det er FIFO bufferen der shifter det mest betydende bit (MSB) ned på MOSI. På FPGA’en bliver MOSI shiftet ind i et shift register, så det passer med at MSB er MSB’s plads. På FGPA’en er det MSB den sender først til MISO. Når Slave Select er høj bliver der ikke overførst data, derfor er det når den er høj, hvor der bliver flyttet data rundt, da der man så ikke flytter data for tidligt eller sendt. 
 
-Det er en enkel protokol som bliver brugt uden tjeksum eller nogen anden form for administration der bliver brugt. Frame størrelse er på 16 bit. På figur ?? kan man se opbygningen af både framen der bliver sendt til FPGA’en og til Micro controlleren. Til FPGA’en bliver der sendt den PWM der skal sættes på den bestemte motor i den bestemte retning. Det er det motor- og retningsbittene bestemmer. Da SPI er full duplex skal der sendes data fra både Micro controlleren og FPGA’en, FPGA’en kan ikke sende data uden at Micro controlleren også gør det. På micro controlleren ville man gerne kunne få en position uden at den sætter en ny PWM. Derfor skal der bruges en bit, hvor FGPA’en kan se om den skal sætte PWM’en eller om den kun skal sende information tilbage. Der er det Feedback (Hvad det nu kaldes) bruges til. Hvis den er 1 bliver framen kasseret, men hvis den er lav bliver PWM’en sat.  
+Det er en enkel protokol som bliver brugt uden tjeksum eller nogen anden form for administration der bliver brugt. Frame størrelse er på 16 bit. På figur ?? kan man se opbygningen af både framen der bliver sendt til FPGA’en og til Micro controlleren. Til FPGA’en bliver der sendt den PWM der skal sættes på den bestemte motor i den bestemte retning. Det er det motor- og retningsbittene bestemmer. Da SPI er full duplex skal der sendes data fra både Micro controlleren og FPGA’en, FPGA’en kan ikke sende data uden at Micro controlleren også gør det. På micro controlleren ville man gerne kunne få en position uden at den sætter en ny PWM. Derfor skal der bruges en bit, hvor FGPA’en kan se om den skal sætte PWM’en eller om den kun skal sende information tilbage. Der er det Position (Hvad det nu kaldes?) bruges til. Hvis den er høj bliver framen kasseret, men hvis den er lav bliver PWM’en sat.  
