--- a/Rapport/content/kommunikation_mellem_mikrocontroller_og_FPGA.tex
+++ b/Rapport/content/kommunikation_mellem_mikrocontroller_og_FPGA.tex
@@ -1,5 +1,7 @@
 \section{Kommunikation mellem mikrocontroller og FPGA}
 
+\todo[author=Åse,inline]{Indsætte en figur af SPI}
+
 Kommunikationen mellem Micro contolleren og FPGA’en foregår med SPI. SPI står for Serial Peripheral Interface. Det er en protokol hvor, der bliver overført data mellem en master og en eller flere slaver. Overførelsen sker med full duplex, så der bliver sendt data både fra masteren og slaven på samme tid.
 
 Der er fire kanaler mellem masteren og slaverne: Slave Select, Serial Clock (SCLK), MOSI og MISO. Slave Select bruges til at vælge hvilken slave, der skal overføres data med. Den kan også sammenlignes med en chip select. SCLK bruges som clock frekvens, den synkroniserer Salve Select, MOSI og MISO. MOSI står for Master Output Slave Input, det er dataet, master sender til slaven, ligeså er MISO Master Input Slave Output, som er dataet, master modtager fra slaven.
@@ -12,11 +14,13 @@ Der er gået mange overvejelser i hvordan SPI'en mellem Micro controlleren og FP
 
 Det blev vedtaget at Mico controlleren var masteren og FPGA'en blev slaven, da FPGA'en helst skulle være så enkel som mulig.
 
-Micro controlleren har også indbygget tre SPI programmer. De tre typer er TI Synchronous Serial Frame Format (SSFT), Freescale og Microwire. Til at overfører dataene mellem Micro controlleren og FPGA’en skal der bruges en enkel protokol med full duplex. Hovedgrundene for at protokollen skal være enkel, er at der ikke sendes meget data, dataene er enkel og afstanden den sendes er kort. Derfor blev SSFT valgt som protokol. I SSFT liggre svaret på nogle af overvejelserne. Overvejelserne har været om MOSI skal trigger på rising eller falling edge, og hvordan Slave Select skulle opføre sig.
+Micro controlleren har også indbygget tre SPI programmer. De tre typer er TI Synchronous Serial Frame Format (SSFT), Freescale og Microwire. Til at overfører dataene mellem Micro controlleren og FPGA’en skal der bruges en enkel protokol med full duplex. Hovedgrundene for at protokollen skal være enkel, er at der ikke sendes meget data, dataene er enkel, og afstanden, den sendes, er kort. Derfor blev SSFT valgt som protokol. I SSFT ligger svaret på nogle af overvejelserne. Overvejelserne har været om MOSI skal trigger på rising eller falling edge, og hvordan Slave Select skulle opføre sig.
 
-Frekvensen af SCLK skal vælges så høj, at SPI ikke bliver en flaskehals i kommunikationen mellem Micro controller og FPGA’en, og tilpas lav, så der ikke introduceres unødige fejlkilder, ved at FPGA’en ikke kan følge med.
+Frekvensen af SCLK skal vælges så høj, at SPI ikke bliver en flaskehals i kommunikationen mellem Micro controller og FPGA’en, og tilpas lav, så der ikke introduceres unødige fejlkilder, ved at FPGA’en ikke kan følge med. Resultat ???
 
-Størrelsen af framen, som sendes skulle være så stor at PWM kan sendes til FPGA’en og ticksne fra FPGA’en kan sendes i den rigtige opløsning. PWM og ticks har begge en størrelse af 11 bit, der skal også være et motor, retnings- og feedback bit.  Det giver at framen mindst skal være 14 bit lang. Micro controlleren understøtter en størrelse mellem fire og 16 bit, 16 bit blev valgt da der så er plads til at udbygge.
+\todo[author=Åse,inline]{HVad er SCLK's frekvens}
+
+Størrelsen af framen skulle være sås stor, at PWM kan sendes til FPGA’en, og positionen i form af ticks kan sendes fra FPGA’en. Begge skal kunne sendes i den rigtige opløsning. PWM og ticks har begge en størrelse af 11 bit. Der skal også være et motor, retnings- og positionsbit. Det giver at framen mindst skal være 14 bit lang. Micro controlleren understøtter en størrelse mellem fire og 16 bit.16 bit blev valgt, da der er plads til udbygning.
 
 
 
@@ -24,15 +28,16 @@ Størrelsen af framen, som sendes skulle være så stor at PWM kan sendes til FP
 
 For at lave SPI på Microcontrolleren, bruges versionen SSFT. Den bruger fire pins ved overførelse af data: SSIClk, SSIFss, SSITx og SSIRx. SSI står for Synchronous Serial Interface, som er Micro controlleren version af SPI. SSIClk er SCLK, SSIFss er Slave Select, SSITx er MOSI og SSIRx er MISO.
 
-Forløbet for en overførelse er SLCK en puls mere end besked størelsen er lang. Da der i denne opgave er en beskedstørrelse på 16 bit, så har SLCK 17 pulser. Ved den første puls sættes Slave Select høj, men sættes lav igen ved falling edge på SCLK. Bagefter sendes de 16 bit synkront med SCLK. Hver gang der er rising edge på SCLK sendes et bit, FPGA’en aflæser bitten på falling edge på SCLK, da MOSI har haft tid til at omstille sig til høj eller lav.
+\todo[author=Åse,inline]{Indsætte en figur af forløbet af SPI, noget ligesom det i databladet, eller et billedet fra oscilloskoppet}
 
-SPI på FPGA’en er meget enkel, det er to shift registre, en til MOSI og en til MISO. På Micro controlleren kommer dataene fra en FIFO buffer. Det er FIFO bufferen der shifter det mest betydende bit (MSB) ned på MOSI. På FPGA’en bliver MOSI shiftet ind i et shift register, så det passer med at MSB er MSB’s plads. På FGPA’en er det MSB den sender først til MISO. Når Slave Select er høj bliver der ikke overførst data, derfor er det når den er høj, hvor der bliver flyttet data rundt, da der man så ikke flytter data for tidligt eller sendt. 
+En frame tager antallet af SLCK at overfører. Antallet af SCLK en puls mere end frame størrelsen. Da der i denne opgave er en frame størrelse på 16 bit, så har SLCK 17 pulser. Ved den første puls sættes Slave Select høj, men sættes lav igen ved falling edge på SCLK. Bagefter sendes de 16 bit synkront med SCLK. Hver gang der er rising edge på SCLK sendes et bit, FPGA’en aflæser bitten på falling edge, da MOSI har haft tid til at omstille sig til høj eller lav.
 
-Det er en enkel protokol som bliver brugt uden tjeksum eller nogen anden form for administration der bliver brugt. Frame størrelse er på 16 bit. På figur ?? kan man se opbygningen af både framen der bliver sendt til FPGA’en og til Micro controlleren. Til FPGA’en bliver der sendt den PWM der skal sættes på den bestemte motor i den bestemte retning. Det er det motor- og retningsbittene bestemmer. Da SPI er full duplex skal der sendes data fra både Micro controlleren og FPGA’en, FPGA’en kan ikke sende data uden at Micro controlleren også gør det. På micro controlleren ville man gerne kunne få en position uden at den sætter en ny PWM. Derfor skal der bruges en bit, hvor FGPA’en kan se om den skal sætte PWM’en eller om den kun skal sende information tilbage. Der er det Position (Hvad det nu kaldes?) bruges til. Hvis den er høj bliver framen kasseret, men hvis den er lav bliver PWM’en sat.  
+SPI på FPGA’en er meget enkel. Det er to shift registre, en til MOSI og en til MISO. På Micro controlleren kommer dataene fra en FIFO buffer. Det er FIFO bufferen der shifter det mest betydende bit (MSB) ned på MOSI. På FPGA’en bliver MOSI shiftet ind i et shift register, så det passer med at MSB er MSB’s plads. På FGPA’en er det MSB, den sender først til MISO. Når Slave Select er høj, bliver der ikke overførst data, derfor er det, når den er høj, hvor der bliver flyttet data rundt, da der man så ikke flytter data for tidligt eller sendt. 
+
+Det er en enkel protokol som bliver brugt uden tjeksum eller nogen anden form for administration. Frame størrelse er på 16 bit. På figur ?? kan man se opbygningen af både framen der bliver sendt til FPGA’en og til Micro controlleren. Til FPGA’en bliver der sendt den PWM, der skal sættes på den bestemte motor i den bestemte retning. Det er det motor- og retningsbittene bestemmer. Da SPI er full duplex skal der sendes data fra både Micro controlleren og FPGA’en, FPGA’en kan ikke sende data uden at Micro controlleren også gør det. På Micro controlleren ville man gerne kunne få en position uden, at den sætter en ny PWM. Derfor skal der bruges en bit, hvor FGPA’en kan se om den skal sætte PWM’en, eller om den kun skal sende information tilbage. Der er det Position (Hvad det nu kaldes?) bruges til. Hvis den er høj bliver framen kasseret, men hvis den er lav bliver PWM’en sat. FRamen der bliver sendt til Micro controlleren er posotionen på den bestemte motor.  
 
 
 %%% FORMAT SPI
-
   
 Fra Mikrokontroller til FPGA format:
 \begin{figure}[th!]
