--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -72,7 +72,7 @@ Med ligningerne \ref{eq:punktmasse_para} og \ref{eq:stang}
 kan tilt-rammens bidrag til pan-inertimomentet altså beregnes vha ligning \ref{eq:tiltOnPan}.
 \begin{align}
 %\begin{equation}
-I_{pan,tilt_{min}}=2\cdot{}\left(\frac{1}{12}\cdot{}\rho\cdot{}L_{2}^3
+I_{pan,tilt_{min}}&=2\cdot{}\left(\frac{1}{12}\cdot{}\rho\cdot{}L_{2}^3
 +\rho\cdot{}\left(L_1-2\cdot{}L_{pro}\right)\left(\frac{L_2-L_{pro}}{2}\right)^2\right)
 \\
 &=0,0146464 \text{ [kg m$^2$]}
