--- a/Rapport/content/kommunikation_mellem_mikrocontroller_og_FPGA.tex
+++ b/Rapport/content/kommunikation_mellem_mikrocontroller_og_FPGA.tex
@@ -42,7 +42,7 @@ Fra Mikrokontroller til FPGA format:
 \end{tabular}
 \captionsetup{type=figure}
 \caption[tekst i indholdsfortegnelsen]{tabeltekst}
-\label{tb:}
+\label{tb:protokol1}
 \end{figure}
 
    
@@ -56,5 +56,5 @@ Fra Mikrokontroller til FPGA format:
  \end{tabular}
  \captionsetup{type=figure}
  \caption[tekst i indholdsfortegnelsen]{tabeltekst}
- \label{tb:}
+ \label{tb:protokol2}
  \end{figure}
