--- a/Rapport/graphics/FPGA_blok.tex
+++ b/Rapport/graphics/FPGA_blok.tex
@@ -25,7 +25,7 @@
 \node[](child2)[xshift=-2cm,right of=output_Decoder]{};
 
 
-\path[->] (display) edge[bend left=0] (Display_Debug);
+\path[<-] (display) edge[bend left=0] (Display_Debug);
 \path[->] (Clock_scaler) edge[bend left=0] (Display_Debug);
 \path[->] (Tic_counter) edge[bend left=0] (Display_Debug);
 \path[->] (encoder1) edge[bend left=10] (Tic_counter);
