Tegnet vinkel in samt små rettelser.

--- a/Rapport/content/forkortelser.tex
+++ b/Rapport/content/forkortelser.tex
@@ -13,15 +13,15 @@ PTS = Pan and Tilt System
 
 \subsection*{Mangler at blive laver/skrevet}
 \begin{itemize}
-\item Problemformulering skal færdiggøres. 
-\item Diskussion
-\item Kontrollerdelen
-\item Teoretisk bestemmelse af PTS inertimoment. 
-\item Konklusion
+\item Abstract
 \item Forord
 \item Indledning
-\item Abstract
-
+\item Pan \& Tilt-rammernes inertimoment
+\item Reguleringsdesign
+\item FPGA
+\item Mikrokontroller
+\item Kommunikation mellem FPGA og Mikrokontroller
+\item 
 \listoftodos
 
 \end{itemize}
