--- a/Rapport/content/koordinattransformation.tex
+++ b/Rapport/content/koordinattransformation.tex
@@ -9,13 +9,7 @@ Idet vinklerne skal bestemmes i forhold til PTS's rotationscenter og ikke koordi
 Koordinattransformation tager udgangspunkt i den kartisiske stedvektor \(Pos(t) \), ligning \ref{eq:pf:vektorparabel3d} samt PTS's offset, ligning \ref{eq:pf:stedvektorparabel}.
 \begin{align}
 \begin{split}
-{ P }_{ c }&=Pos\left( t \right) -PTS
-\\
-%&=\left( \begin{matrix} x\left( t \right) -19,2 \\ y\left( t \right) -0  \\ z\left( t \right) -0,45\end{matrix} \right) \\ 
-%&=\left( \begin{matrix} 32,851\cdot t-19,2 \\ -{ 4,91\cdot t }^{ 2 }+5,473\cdot t+3,05-0,45 \\ 9,34\cdot t+5,5-19,2 \end{matrix} \right) \\
-&= \left( \begin{matrix} - 9,34\cdot t-13,7 \\
-  32,851\cdot t-19,3 \\ 
- -{ 4,91\cdot t }^{ 2 }+5,473\cdot t+2,6\end{matrix} \right) 
+{ P }_{ c }=Pos\left( t \right) -PTS = \left( \begin{matrix} - 9,34\cdot t-13,7 \\32,851\cdot t-19,3\\-{ 4,91\cdot t }^{ 2 }+5,473\cdot t+2,6\end{matrix} \right) 
 \label{eq:pf:stedvektorparabel}
 \end{split}
 \end{align}
