--- a/Rapport/graphics/parabola_in_xy_plane.tex
+++ b/Rapport/graphics/parabola_in_xy_plane.tex
@@ -44,3 +44,10 @@
 
 \draw(-20,-5.5)--(20,-5.5);
 \draw(18.29,-5.5)--(0,0);
+
+
+
+\coordinate (PP2) at (20,3.5);
+\coordinate (PP1) at (20,0);
+\draw (PP1) arc (0:16.9:20);
+\draw (PP2)--(PP2) node[right]{ \(\alpha =15,872^{\circ}\) };
